# workarea-pumptech

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI.md  README.md  docker-compose.yml  influx-writer.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
docs/: grafana-flux-queries.md
scripts/: legacy_influx_writer.py
src/: __init__.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  app.py  logging_setup.py
src/data_collection/: __init__.py  collector.py
src/database/: __init__.py  influx_client.py  models.py
src/hardware/: __init__.py  base.py  mock_hardware.py
src/utils/: __init__.py  helpers.py
tests/: test_main.py  testmain.py
