[project]
name = "workarea-pumptech"
version = "0.1.0"
description = "PumpTech Data Collection and Monitoring System - A modular system for collecting data from hardware sensors and uploading to InfluxDB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "influxdb-client>=1.49.0",
    # Hardware interface dependencies (uncomment as needed)
    # "pyserial>=3.5",           # For serial communication
    # "RPi.GPIO>=0.7.1",         # For Raspberry Pi GPIO (ARM only)
    # "adafruit-circuitpython-busdevice>=5.2.0",  # For I2C/SPI devices
    # "smbus2>=0.4.0",           # For I2C communication on Linux
    # "spidev>=3.5",             # For SPI communication on Linux
    # "modbus-tk>=1.1.2",        # For Modbus communication
    # "paho-mqtt>=1.6.0",        # For MQTT communication
    # "requests>=2.28.0",        # For HTTP/REST API communication
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

hardware = [
    # Uncomment these when you need real hardware support
    # "pyserial>=3.5",
    # "RPi.GPIO>=0.7.1",
    # "adafruit-circuitpython-busdevice>=5.2.0",
    # "smbus2>=0.4.0",
    # "spidev>=3.5",
    # "modbus-tk>=1.1.2",
    # "paho-mqtt>=1.6.0",
    # "requests>=2.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
